--- a/usbCameraTest4/src/main/AndroidManifest.xml
+++ b/usbCameraTest4/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
   ~  may have a different license, see the respective files.
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.serenegiant.otgUI">
+    package="com.doorcamera.smileui">
 
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
